--- a/src/main/webapp/public/resources/themes/autumn/style.css
+++ b/src/main/webapp/public/resources/themes/autumn/style.css
@@ -23,7 +23,7 @@
 html {
     background-image: url('autumn-bg.jpg');
     background-size: 100%;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-color: White;
 }
 
@@ -78,6 +78,44 @@ p {
     border-radius: 5px;
     filter:alpha(opacity=80);
     opacity: 0.8;
+}
+
+.header-button {
+    margin: 0px;
+    margin-top: 6px;
+    margin-left: 6px;
+    border: 1px solid transparent;
+}
+.header-button:hover {  border: 1px solid #f39c12; }
+
+#header-username-group, #header-username {
+    text-align: right;
+}
+
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+    font: 20px FontAwesome;
+    margin-right: 0px;
+}
+
+#HomeButton span.btn-icon:before {
+    content: "\f015";
+}
+
+#LogoutButton span.btn-icon:before {
+    content: "\f08b";
+}
+
+#header-username-caret span.m-icon {
+    content: "\f08b";
+}
+
+.tile {
+    width: 165px;
+    height: 165px;
+}
+
+.tile:hover {
+    border: 1px solid #f39c12; 
 }
 
 #footer {
