--- a/src/main/webapp/public/resources/themes/matrix/style.css
+++ b/src/main/webapp/public/resources/themes/matrix/style.css
@@ -82,6 +82,51 @@ html, body {
 
 }
 
+#button-openHeader {
+    color: #00cc00;
+}
+
+.header-button {
+    margin: 0px;
+    margin-top: 6px;
+    margin-left: 6px;
+    background-color: black;
+    color: #00cc00;
+}
+
+#header-username-group, #header-username {
+    text-align: right;
+}
+
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+    font: 20px FontAwesome;
+    margin-right: 0px;
+}
+
+#HomeButton span.btn-icon:before {
+    content: "\f015";
+}
+
+#LogoutButton span.btn-icon:before {
+    content: "\f08b";
+}
+
+#header-username-caret span.m-icon {
+    content: "\f08b";
+}
+
+.tile {
+    background: transparent;
+    width: 160px;
+    height: 160px;
+    border: 1px solid #00cc00;
+}
+
+.tile:hover {
+    background: transparent;
+    border: 1px solid #fff;
+}
+
 #centerbody {
     padding: 10px 10px 40px 10px;
     border: 0;
