--- a/src/main/webapp/public/resources/themes/sterile/style.css
+++ b/src/main/webapp/public/resources/themes/sterile/style.css
@@ -61,6 +61,38 @@ html, body {
     color: #444444;
 }
 
+.header-button {
+    margin: 0px;
+    margin-top: 6px;
+    margin-left: 6px;
+}
+
+#header-username-group, #header-username {
+    text-align: right;
+}
+
+#HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
+    font: 20px FontAwesome;
+    margin-right: 0px;
+}
+
+#HomeButton span.btn-icon:before {
+    content: "\f015";
+}
+
+#LogoutButton span.btn-icon:before {
+    content: "\f08b";
+}
+
+#header-username-caret span.m-icon {
+    content: "\f08b";
+}
+
+.tile {
+    width: 160px;
+    height: 160px;
+}
+
 #centerbody {
     background-color: #ffffff;
     padding: 10px 10px 40px 10px;
