--- a/src/main/webapp/public/resources/configStyle.css
+++ b/src/main/webapp/public/resources/configStyle.css
@@ -25,25 +25,26 @@ body {
 }
 
 .border {
-    border: 1px solid #dae1e1 !important;
+    border: 1px solid #D4D4D4 !important;
 }
 
 .setting_outline {
-    background-color: #eef2f2;
-    border-radius: 3px;
+    background-color: #eaeaea;
+    border-radius: 3px 3px 5px 5px;
     /* box-shadow: 2px 2px 1px 1px #dcdcdc; */
     margin-bottom: 10px;
-    padding-bottom: 5px;
     animation: fadein 0.5s;
     -moz-animation: fadein 0.5s; /* Firefox */
     -webkit-animation: fadein 0.5s; /* Safari and Chrome */
 }
 
 .setting_title {
-    color: #2d3d45;
+    color: black;
+    background-color: #d3d3d3;
+    opacity: 0.75;
     padding-left: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 4px;
+    padding-bottom: 3px;
     font-weight: bold;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
@@ -67,7 +68,7 @@ body {
 }
 
 .setting_body {
-    padding: 10px;
+    padding: 5px;
 }
 
 .setting_body.modified {
@@ -82,15 +83,16 @@ body {
     cursor: pointer;
 }
 
-.pwm-icon-question-circle, .pwm-icon-undo {
-    font-size: 15px;
+.pwm-icon-question-circle {
+    border-bottom-right-radius: 3px;
+    box-shadow: 2px 2px 2px 2px #bfbfbf;
 }
 
 .pwm-icon-reply {
     color: #920000;
     visibility: hidden;
     border-bottom-right-radius: 3px;
-    box-shadow: 2px 2px 2px 2px #dae1e1;
+    box-shadow: 2px 2px 2px 2px #bfbfbf;
 }
 
 .helpDiv {
@@ -124,8 +126,8 @@ body {
 #header-center-wide {
     width: 850px;
     margin: 0 auto;
-    position: relative;
-    padding: 4px;
+    position:relative;
+    padding:4px;
 }
 
 .headerIcon {
@@ -199,7 +201,7 @@ body {
 table {
     max-width: 100%;
     font-size: 12px;
-    border-color: #dae1e1;
+    border-color: #D4D4D4;
 }
 
 .modifiedNoticeIcon {
@@ -218,14 +220,14 @@ table {
 }
 
 #searchResults {
-    padding: 15px;
-    border: 1px solid #dae1e1;
+    padding:5px;
+    border: 1px solid;
     max-height: 250px;
     width: 580px;
     overflow-y: auto;
     position: fixed;
-    margin-left: 0;
-    margin-right: auto;
+    margin-left: 120px;
+    margin-right: 110px;
     z-index: 10;
     background: white;
 }
@@ -238,12 +240,13 @@ table {
 }
 
 #navigationTreeWrapper {
-    border: 1px solid #dae1e1;
-    border-radius: 3px;
+    border: 1px solid #bfbfbf;
+    border-radius: 3px 3px 5px 5px;
+    box-shadow: 1px 1px 0px 0px #dfdfdf;
     float: left;
     margin-right: 5px;
     background-color: white;
-    margin-top: 45px;
+    margin-top: 57px;
     height: 85vh;
     width: 242px;
     position: fixed;
@@ -254,7 +257,6 @@ table {
 
 #navigationTree {
     height: 100%;
-    padding-top: 3px;
 }
 
 #navTreeExpanderButtons {
@@ -268,10 +270,13 @@ table {
     width:600px;
     float:right;
     border:0;
-    margin-top: 45px;
+    margin-top: 57px;
 }
 
 #settingSearchPanel {
+    margin-top: 10px;
+    padding-top: 10px;
+    margin-bottom: 10px;
     position:fixed;
     z-index: 2;
     background: white;
@@ -281,35 +286,24 @@ table {
     -webkit-animation: fadein 1.5s; /* Safari and Chrome */
 }
 
-#settingSearchPanel .pwm-icon-search {
-    display: none;
-}
-
 .setting_item_value_wrapper {
-    border: 0px solid #dae1e1;
+    border: 2px solid #D4D4D4;
     margin-bottom: 4px;
 }
 
 .checkboxWrapper {
     padding: 2px 5px;
-    border: 1px solid #eef2f2;
+    border: 1px solid #bfbfbf;
     border-radius: 3px;
-    background-color: #f6f9f8;
+    background-color: white;
     display: inline-block;
-    margin-right: 1px;
-    margin-bottom: 1px;
-}
-
-.checkboxWrapper:hover {
-    border: 1px solid #dae1e1;
-    cursor: pointer;
 }
 
 .configStringInput {
     width: 500px;
     padding:2px 5px;
     margin: 0;
-    border: 1px solid #dae1e1;
+    border: 1px solid #bfbfbf;
     font-size: 9pt;
     background: white;
     display: inline-block;
@@ -320,7 +314,7 @@ table {
     width: 85px;
     padding:2px 5px;
     margin: 0;
-    border: 1px solid #dae1e1;
+    border: 1px solid #bfbfbf;
     font-size: 9pt;
     background: white;
     display: inline-block;
@@ -336,8 +330,7 @@ input:invalid{
     font-weight: bold;
 }
 .pane-help {
-    color: #697c87;
-    border-bottom: 1px solid #dae1e1;
+    border-bottom: 1px #d3d3d3 solid;
     padding: 5px;
     max-height: 250px;
     margin: 2px 2px 15px;
@@ -362,56 +355,34 @@ input:invalid{
 }
 
 .configeditor-header {
-    height: 40px !important;
-    background: linear-gradient(to right, #26a9e0, #0088ce ) !important;
-}
-
-.configeditor-header #header-title {
-    margin-top: 8px;
+    height: 25px !important;
+    position: fixed !important;
 }
 
 .settingSearchPanelTable {
     width:600px;
-    margin-left: 0;
-    margin-right: auto;
-}
-
-.settingSearchPanelTable td {
-    padding: 0;
-}
-
-.settingSearchPanelTable td input {
-    font-size: 14px;
-    width: 300px;
-    border: 1px solid #dae1e1;
-    border-radius: 2px;
-    padding: 5px;
-    border: 1px solid #dae1e1 !important;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .settingSearchPanelTable_Col1 {
-    width: 1px;
+    width:10px;
 }
 
 .settingSearchPanelTable_Col2 {
-    width: 300px;
+    width:580px;
 }
 
 .settingSearchPanelTable_Col3 {
-    min-width: 300px;
-    max-width: 300px;
-    display: inline-block;
+    min-width:10px;
+    max-width:10px;
+    display: inline-block
 }
 
 #homeSettingSearch {
-    font-size: 16px !important;
-    border-radius: 2px;
-    border: 1px solid #dae1e1 !important;
-    width: 280px;
-    height: 30px;
-    margin-left: 0;
-    margin-right: auto;
-    padding: 5px;
+    width: 570px;
+    margin-left:auto;
+    margin-right: auto
 }
 
 #working_icon {
@@ -442,8 +413,8 @@ input:invalid{
 }
 
 .configNumericLimits {
-    font-size: small;
-    color: #697c87;
+    font-size: smaller;
+    color: grey;
     margin-left: 10px;
 }
 
@@ -456,7 +427,7 @@ input:invalid{
 }
 
 .noWrapTextBox.border {
-    border: 1px solid #dae1e1;
+    border: 1px solid #bfbfbf;
     margin: 0;
 }
 
@@ -474,7 +445,7 @@ input:invalid{
     margin-left: auto;
     margin-right: auto;
     */
-    color: #f6f9f8;
+    color: #c3c3c3;
     text-align: center;
     font-size: 10px;
     font-family: "Courier New", Courier, monospace;
@@ -528,28 +499,20 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 
-button, .btn {
+button {
     text-decoration: none;
     color: #3e374c;
-    background: #f6f9f8;
-    margin-top: 10px;
+    background: white;
     cursor: pointer;
-    border: 1px solid #dae1e1;
-    border-radius: 3px;
-}
+    border: 1px solid #9e9e9e;
+    border-radius: 2px;
+}.button:disabled {
+     color: #9e9e9e;
+ }
 
-button:hover {
-    color: #0088ce;
-    border: 1px solid #28A9E1;
-}
-
-.button:disabled {
-    color: #9e9e9e;
-}
-
-select {
-    color: black;
-}
+ select {
+     color: black;
+ }
 
 #button-openMenu {
     position: absolute;
@@ -573,15 +536,4 @@ select {
 
 .selectableDN {
     cursor: pointer;
-}
-
-.footnote {
-    color: #697c87;
-    background: #eef2f2;
-    width: auto !important;
-    padding: 3px;
-}
-
-#panel-skippedSettingInfo {
-    background: transparent !important;
 }
