--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -454,11 +454,9 @@ div.progress-container > div {
 }
 
 #header-center-right {
-    float: right;
-    width: 100px;
-    height: 60px;
-    padding-top: 7px;
-	padding-right: 30px;
+  position: absolute;
+  right: 0;
+  top: 10px;
 }
 
 .header-button {
@@ -494,14 +492,9 @@ div.progress-container > div {
     position: relative;
 }
 
-#header-menu-wrapper { /*temp assignment */
-}
-
 #header-warning {
     text-align: center;
     position: absolute;
-    right:6px;
-    top:6px;
     width: 200px;
     border: 2px solid #aaaaaa;
     background-color: #DDDDDD;
