--- a/src/main/webapp/public/resources/themes/pwm/style.css
+++ b/src/main/webapp/public/resources/themes/pwm/style.css
@@ -113,19 +113,12 @@ h3 {
     box-shadow: 4px 4px 2px #888888;
     border:none;
     border-radius: 2px;
-    animation: slideInRight 0.3s;
-    -moz-animation: slideInRight 0.3s; /* Firefox */
-    -webkit-animation: slideInRight 0.3s; /* Safari and Chrome */
 }
 
 .header-button {
     margin: 0px;
     margin-top: 6px;
     margin-left: 6px;
-}
-
-#header-username-group, #header-username {
-    text-align: right;
 }
 
 #HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
@@ -161,4 +154,50 @@ h3 {
 
 .push, #footer {
     height: 40px;
+}
+
+#header-menu-wrapper {
+    color: white;
+    text-align: right;
+}
+
+#header-menu-alert {
+    display: inline-block;
+    height: 10px;
+}
+
+#header-menu-alert::before {
+    color: #e50000;
+    content: "\f071";
+    font: 12px FontAwesome;
+}
+
+#header-username-group, #header-username {
+    display: inline-block;
+}
+
+#header-menu {
+    cursor: pointer;
+}
+
+#header-menu:only-child {
+  padding-top: 15px;
+}
+
+#header-username-caret {
+    display: inline-block;
+}
+
+#header-username-caret::after {
+    content: "\f078";
+    font: 12px FontAwesome;
+}
+
+#header-menu-icon {
+  display: inline-block;
+}
+
+#header-menu-icon::after {
+  content: "\f141";
+  font: 12px FontAwesome;
 }
