--- a/src/main/webapp/public/resources/themes/pwm/style.css
+++ b/src/main/webapp/public/resources/themes/pwm/style.css
@@ -98,10 +98,8 @@ h3 {
 
 .header-button {
     border-radius: 3px;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #E8E1F6), color-stop(1, #B2B1B9) );
     background:linear-gradient(to bottom, #E8E1F6 5%, #B2B1B9 100% );
 }.header-button:hover {
-     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #B2B1B9), color-stop(1, #E8E1F6) );
      background:linear-gradient(to bottom, #B2B1B9 5%, #E8E1F6 100% );
 }
 
@@ -113,17 +111,16 @@ h3 {
     box-shadow: 4px 4px 2px #888888;
     border:none;
     border-radius: 2px;
+    animation: slideInTop 0.05s;
 }
 
 .header-button {
-    margin: 0px;
-    margin-top: 6px;
-    margin-left: 6px;
+    margin: 6px 0 0 6px;
 }
 
 #HomeButton span.btn-icon, #LogoutButton span.btn-icon, #header-username-caret span.m-icon {
     font: 20px FontAwesome;
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 #HomeButton span.btn-icon:before {
@@ -149,8 +146,7 @@ h3 {
 
 
 @keyframes slideInRight { 0% { transform: translate3d(100%, 0, 0); visibility: visible; } 100% { transform: translate3d(0, 0, 0); } }
-@-webkit-keyframes slideInRight { 0% { transform: translate3d(100%, 0, 0); visibility: visible; } 100% { transform: translate3d(0, 0, 0); } }
-@-moz-keyframes slideInRight { 0% { transform: translate3d(100%, 0, 0); visibility: visible; } 100% { transform: translate3d(0, 0, 0); } }
+@keyframes slideInTop { 0% { transform: translate3d(0, -100%, 0); visibility: visible; } 100% { transform: translate3d(0, 0, 0); } }
 
 .push, #footer {
     height: 40px;
@@ -164,6 +160,8 @@ h3 {
 #header-menu-alert {
     display: inline-block;
     height: 10px;
+    animation: blink 2s steps(5, start) infinite;
+    -webkit-animation: fadein 2s, blink 2s steps(5, start) infinite;
 }
 
 #header-menu-alert::before {
