--- a/src/main/webapp/public/resources/themes/blue/style.css
+++ b/src/main/webapp/public/resources/themes/blue/style.css
@@ -122,6 +122,10 @@
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
