--- a/src/main/webapp/public/resources/themes/pwm/style.css
+++ b/src/main/webapp/public/resources/themes/pwm/style.css
@@ -173,6 +173,10 @@ h3 {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
