--- a/src/main/webapp/public/resources/themes/red/style.css
+++ b/src/main/webapp/public/resources/themes/red/style.css
@@ -164,6 +164,10 @@ a:hover {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
