--- a/src/main/webapp/public/resources/themes/sterile/style.css
+++ b/src/main/webapp/public/resources/themes/sterile/style.css
@@ -208,6 +208,10 @@ table td {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
