--- a/src/main/webapp/public/resources/themes/water/style.css
+++ b/src/main/webapp/public/resources/themes/water/style.css
@@ -246,6 +246,10 @@ table td.key {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
