--- a/src/main/webapp/public/resources/themes/autumn/style.css
+++ b/src/main/webapp/public/resources/themes/autumn/style.css
@@ -194,6 +194,10 @@ table td.key {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
