--- a/src/main/webapp/public/resources/themes/basic/style.css
+++ b/src/main/webapp/public/resources/themes/basic/style.css
@@ -73,6 +73,10 @@
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
