--- a/src/main/webapp/public/resources/themes/midnight/style.css
+++ b/src/main/webapp/public/resources/themes/midnight/style.css
@@ -162,6 +162,10 @@ input, button {
     display: inline-block;
 }
 
+#header-menu-wrapper > #header-username {
+    display: block;
+}
+
 #header-menu {
     cursor: pointer;
 }
