configmanager style improvements

--- a/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -176,6 +176,9 @@ html {
 
 .menubutton.important {
     color: red;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: bold;
 }
 
 .text {
