Updated the styling for the shortcut tiles.
This keeps the titles from getting truncated, and shows the description as a tooltip, in case it gets pushed down too far.

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -365,7 +365,7 @@ input[type=password]::-ms-reveal{display: none;}
     color: #434c50;
     font-size: 16px;
     line-height: 18px;
-    max-height: 34px;
+    max-height: none;
     overflow: hidden;
     margin-bottom: 2px;
     text-overflow: ellipsis;
