improve ldap schema screens in configguide

--- a/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -577,3 +577,9 @@ select {
 .dijitTreeRowSelected {
     background-color: #eaeaea;
 }
+
+
+.overflow-panel-medium {
+    max-height: 350px;
+    overflow-y: auto
+}
