Updated the config help text for the Response Regular Expressions section.  Also updated the style to support newline breaks.

--- a/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -357,6 +357,15 @@ input:invalid{
     animation: fadein 1s;
 }
 
+/* This allows us to show text with carriage returns in it, without having to use <br> tags.  We may want to put this on .pane-help eventually */
+#pane-help-sms\.responseOkRegex {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 .pane-settingValue {
     /*
     max-height: 300px;
