--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -1041,3 +1041,6 @@ dialog .closeIcon { float: right; cursor: pointer; margin-right: 3px; }
 .center { text-align: center; }
 
 
+.something {
+    display: none;
+}
