Updated report so data from "Download as CSV" matches columns selected on the web page.
This involved updating the javascript on the client side so it sends the list of selected columns to the server side when the "Download as CSV" button is clicked.  It also involved introducing the concept of column filters to the report service.

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -1044,3 +1044,7 @@ dialog .closeIcon { float: right; cursor: pointer; margin-right: 3px; }
 .something {
     display: none;
 }
+
+#grid-hider-menu {
+    width: 200px;
+}
