remove some inline css styles

--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -197,6 +197,14 @@ table td.key {
       border-collapse: collapse;
   }
 
+.nopadding {
+    padding: 0;
+}
+
+.nodisplay {
+    display: none;
+}
+
 /* disable ie password reveal */
 input[type=password]::-ms-reveal{display: none;}
 
