--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -15,7 +15,7 @@
         <td>{{ person.sn }}</td>
         <td>{{ person.title }}</td>
         <td>{{ person.mail }}</td>
-        <td>{{ person.telephone }}</td>
+        <td>{{ person.telephoneNumber }}</td>
     </tr>
     </tbody>
 </table>
