--- a/src/main/webapp/public/resources/style.css
+++ b/src/main/webapp/public/resources/style.css
@@ -128,7 +128,7 @@ table td.key {
 }
 
 .healthTable-wrapper {
-    margin-top:5px; margin-left: 20px; margin-right: 20px; padding:0;
+    margin-top:5px; margin-left: 0; margin-right: 0; padding:0;
     max-height: 300px; overflow-y: auto
 }
 
