Implemented the search method for the production version of the PeopleService.
Also added a scripts for running the webpack dev server in production mode, and copying the results to the src/main/webapp/publc/resources/app folder, which is handy when running a local instance of PWM from the command:
$ mvn tomcat7:run -P developer.

Also hooked up the people search table and cards pages, so they properly display the results of the PeopleService search.

--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -10,11 +10,11 @@
     </thead>
     <tbody>
         <tr ng-repeat="person in $ctrl.people" ng-click="$ctrl.selectPerson(person.userKey)">
-            <td>{{ person.detail.givenName.values[0] }}</td>
-            <td>{{ person.detail.sn.values[0] }}</td>
-            <td>{{ person.detail.title.values[0] }}</td>
-            <td>{{ person.detail.mail.values[0] }}</td>
-            <td>{{ person.detail.telephoneNumber.values[0] }}</td>
+            <td>{{ person.givenName }}</td>
+            <td>{{ person.sn }}</td>
+            <td>{{ person.title }}</td>
+            <td>{{ person.mail }}</td>
+            <td>{{ person.telephoneNumber }}</td>
         </tr>
     </tbody>
 </table>
